# rs-schnapsen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
card-deck/: Cargo.toml
card-deck/src/: deck.rs  lib.rs
card-deck/src/card/: mod.rs  rank.rs  suit.rs
schnapsen/: Cargo.toml
